--- a/TheoryWeb/packages.config
+++ b/TheoryWeb/packages.config
@@ -4,6 +4,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.1" targetFramework="net45" />
   <package id="Endjin.Core.Composition" version="2.2.0.27" targetFramework="net45" />
+  <package id="Endjin.Core.Composition.Web" version="2.2.0.27" targetFramework="net45" />
   <package id="Endjin.Core.Composition.WebApi" version="2.2.0.27" targetFramework="net45" />
   <package id="jQuery" version="1.9.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
@@ -15,6 +16,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.4" targetFramework="net45" />
